<resources>
    <string name="app_name">MangaSelf</string>
    <string name="title_readings">Leituras</string>
    <string name="title_add">Adicionar</string>
    
    <!-- AddFragment -->
    <string name="toolbar_title">Novo título</string>
    <string name="hint_title">Título</string>
    <string name="hint_author">Autor</string>
    <string name="hint_publisher">Editora</string>
    <string name="checkbox_is_completed">Título completo (Opcional)</string>
    <string name="hint_total_editions">Total de edições</string>
    <string name="hint_current_edition">Edição atual</string>
    <string name="button_register">Registrar</string>
</resources>